[package]
name = "jellyfish_merkle"
version = "0.1.0"
authors = ["David Bryson <dbryson@mitre.org>"]
edition = "2018"

[dependencies]
bincode = "1.1.1"
byteorder = "1.3.2"
bytes = "0.4.12"
hex = "0.3"
lazy_static = "1.3.0"
tiny-keccak = "1.5.0"
failure = "0.1.3"
num-derive = "0.2"
num-traits = "0.2"
proptest = "0.9.2"
proptest-derive = "0.1.2"
rand = "0.6.5"
serde = { version = "1.0.96", features = ["derive"] }

